--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -23,4 +23,4 @@ RUN pipenv install --skip-lock --system
 # copy project
 COPY . /usr/src/app/
 
-CMD ["gunicorn", "--bind", ":80", "--timeout", "30", "agents.wsgi:application"]
+CMD ["gunicorn", "--bind", ":80", "--timeout", "30", "agents.wsgi:application", "--access-logfile=/dev/stdout", "--access-logformat=%(t)s %(h)s \"%(r)s\" %(s)s %(b)s \"%(a)s\" %(D)sμs"]
