--- a/web/routing.conf
+++ b/web/routing.conf
@@ -6,7 +6,7 @@ server {
     proxy_pass http://contacts_app;
 
     # Pass a bunch of headers to the downstream server, so it knows what's going on.
-    proxy_set_header Host $host;
+    proxy_set_header Host $http_host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
     # Backends are sent the correct host header above, 
