--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,14 @@ services:
     image: lucas42/lucos_contacts_app
     volumes:
       - "staticfiles:/usr/src/app/static"
+    depends_on:
+      - db
     #extra_hosts:
       #- "auth.l42.eu:10.0.0.8"
+  db:
+    image: postgres:11-alpine
+    volumes:
+      - db_data:/var/lib/postgresql/data/
 volumes:
   staticfiles:
+  db_data:
