--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,10 @@ services:
     build: ./app
     container_name: contacts_app
     image: lucas42/lucos_contacts_app
+    environment:
+      - SECRET_KEY
+      - API_KEY
+      - PRODUCTION
     volumes:
       - "staticfiles:/usr/src/app/static"
     depends_on:
