--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,10 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Install dependencies
+          command: pipenv install
+          working_directory: app
+      - run:
           name: Run tests for django app
           command: pipenv run python manage.py test
           working_directory: app
