--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,10 @@ jobs:
       - run:
           name: Deploy using docker-compose
           command: DOCKER_HOST="ssh://$DEPLOY_USERNAME@$PRODUCTION_HOST" docker-compose up -d --no-build
+    filters:
+      branches:
+        only:
+          - master
 workflows:
   version: 2
   build-deploy:
