--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ workflows:
       - test-app
       - lucos/build-amd64:
           context: docker
-      - lucos/deploy-valen:
+      - lucos/deploy-avalon:
           context: docker
           requires:
             - test-app
