--- a/app/Pipfile
+++ b/app/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django = "==3.2.15"
 gunicorn= "==20.1.0"
 requests = "*"
+django-phonenumber-field = {extras = ["phonenumbers"], version = "*"}
 
 [dev-packages]
 
