--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           working_directory: app
       - run:
           name: Run tests for django app
-          command: pipenv run python manage.py test
+          command: pipenv run python manage.py test agents.tests comms.tests lucosauth.tests
           working_directory: app
 workflows:
   version: 2
