--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
 jobs:
   test-app:
     docker:
-      - image: circleci/python:3.12
+      - image: python:3.12
     steps:
       - checkout
       - run:
