use 'setup_remote_docker' so circleci can run tests in docker

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
       - image: cimg/base:current
     steps:
       - checkout
+      - setup_remote_docker
       - run:
           name: Populate known_hosts
           command: |
