--- a/app/Pipfile
+++ b/app/Pipfile
@@ -9,6 +9,7 @@ gunicorn = "==23.0.0"
 requests = "*"
 django-phonenumber-field = {extras = ["phonenumbers"], version = "*"}
 icalendar = "*"
+psycopg = "*"
 
 [dev-packages]
 
