--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 orbs:
   lucos: lucos/deploy@0
 jobs:
-  test-app:
+  test:
     docker:
       - image: cimg/base:current
     steps:
@@ -28,7 +28,7 @@ workflows:
   version: 2
   build-deploy:
     jobs:
-      - test-app
+      - test
       - lucos/build-amd64
       - lucos/deploy-avalon:
           requires:
