--- a/web/routing.conf
+++ b/web/routing.conf
@@ -3,7 +3,7 @@ server {
   server_tokens off;
 
   location / {
-    proxy_pass http://contacts_app;
+    proxy_pass http://lucos_contacts_app;
 
     # Pass a bunch of headers to the downstream server, so it knows what's going on.
     proxy_set_header Host $http_host;
