--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     environment:
       - SECRET_KEY
       - PRODUCTION
+      - CLIENT_KEYS
     volumes:
       - "staticfiles:/usr/src/app/static"
     restart: always
@@ -36,6 +37,7 @@ services:
     image: lucas42/lucos_contacts_app
     environment:
       - SECRET_KEY=test
+      - CLIENT_KEYS=
     depends_on:
       - db
     command: ./manage.py test agents.tests comms.tests lucosauth.tests
