--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - SECRET_KEY
       - PRODUCTION
       - CLIENT_KEYS
+      - LOGANNE_ENDPOINT
     volumes:
       - "staticfiles:/usr/src/app/static"
     restart: always
