add RDF output of agents - for now just adding field which have simple FOAF mapping

--- a/app/Pipfile
+++ b/app/Pipfile
@@ -10,6 +10,7 @@ requests = "*"
 django-phonenumber-field = {extras = ["phonenumbers"], version = "*"}
 icalendar = "*"
 psycopg = "*"
+rdflib = "*"
 
 [dev-packages]
 
