--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
     environment:
       - SECRET_KEY=test
       - CLIENT_KEYS=external_calendar:test=1234
+      - BASE_URL=http://localhost:8013
     depends_on:
       - db
     command: ./manage.py test agents.tests comms.tests lucosauth.tests
