--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,6 +17,11 @@ updates:
   schedule:
     interval: daily
     time: "07:00"
+- package-ecosystem: npm
+  directory: "/app"
+  schedule:
+    interval: daily
+    time: "07:00"
 - package-ecosystem: "github-actions"
   directory: "/"
   schedule:
