add test image to its own profile so it isn't built by default in publish pipeline

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,8 @@ services:
     depends_on:
       - db
     command: ./manage.py test agents.tests comms.tests lucosauth.tests
+    profiles:
+      - test
 volumes:
   staticfiles:
   db_data:
