--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
           working_directory: app
       - run:
           name: Run tests for django app
-          command: docker compose up test --build --exit-code-from test
+          command: docker compose --profile test up test --build --exit-code-from test
       - run:
           name: Delete envfile
           command: |
