--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,6 @@
   "name": "lucos_contacts_ui",
   "description": "Client side js components for lucos_contacts",
   "dependencies": {
-    "lucos_navbar": "^2.1.2",
-    "tom-select": "^2.5.1"
+    "lucos_navbar": "^2.1.2"
   }
 }
